# RAG-using-Ollama

./: .env  .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  rag.py  requirements.txt
data/vector_store/: index.faiss
src/: app.py  config.py  ingest.py  rag.py  retriever.py  rich_app.py
vector_db/: index.pkl
